--- a/src/Makefile
+++ b/src/Makefile
@@ -1,3 +1,6 @@
 
 reflect:
-	gcc -g -I../include parse.c emit.c reflect.c -o reflect
+	gcc -g -I../include ast.c parse.c emit.c reflect.c -o reflect
+
+run:
+	tcc -g -I../include ast.c parse.c emit.c -run reflect.c
