make rule for 'structs' even though it fails..

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -1,10 +1,15 @@
 
 
-generics: codegen
-	@mkdir -p build
+generics:
+	@mkdir -p gen/generics
+	@rm -rf gen/generics/*
+	../build/reflect -o ./gen/generics generics.c
+	@mkdir -p ../build
 	gcc -I../include -I../src generics.c gen/*.c -o ../build/generics
 
-codegen:
-	@mkdir -p gen
-	@rm -rf gen/*
-	../build/reflect -o ./gen generics.c
+structs:
+	@mkdir -p gen/structs
+	@rm -rf gen/structs/*
+	../build/reflect -o ./gen/structs structs.c
+	@mkdir -p ../build
+	gcc -I../include -I../src structs.c gen/*.c -o ../build/structs
